<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.microsmartgrid</groupId>
	<artifactId>microsmartgrid</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>microsmartgrid</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.jupiter.version>5.5.2</junit.jupiter.version>
		<junit.platform.version>1.5.2</junit.platform.version>
		<paho.mqtt.client.version>1.2.0</paho.mqtt.client.version>
		<dailab.jiac.agentcore.version>5.2.4</dailab.jiac.agentcore.version>
		<log4j.logging.version>2.12.1</log4j.logging.version>
		<fasterxml.jackson.core.version>2.10.0</fasterxml.jackson.core.version>
		<fasterxml.jackson.module.version>2.10.0.pr2</fasterxml.jackson.module.version>
		<jdbc.postgres.driver.version>42.2.8</jdbc.postgres.driver.version>
		<spring.framework.version>5.1.9.RELEASE</spring.framework.version>
		<maven.enforcer.plugin.version>3.0.0-M3</maven.enforcer.plugin.version>
		<required.maven.version>3.5</required.maven.version>
		<maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
		<maven.compiler.release.version>11</maven.compiler.release.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
		<maven.failsafe.plugin.version>2.22.0</maven.failsafe.plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- Jiac V - framework for distributed services -->
			<dependency>
				<groupId>de.dailab.jiactng</groupId>
				<artifactId>agentCore</artifactId>
				<version>${dailab.jiac.agentcore.version}</version>
			</dependency>
			<!-- Jupitor/junit - testing framework -->
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit.jupiter.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.platform</groupId>
				<artifactId>junit-platform-runner</artifactId>
				<version>${junit.platform.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${junit.jupiter.version}</version>
				<scope>test</scope>
			</dependency>
			<!-- Paho - mqtt client -->
			<dependency>
				<groupId>org.eclipse.paho</groupId>
				<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
				<version>${paho.mqtt.client.version}</version>
			</dependency>
			<!-- log4j - external logging library -->
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>${log4j.logging.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>${log4j.logging.version}</version>
			</dependency>
			<!-- Jackson - json processing library -->
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${fasterxml.jackson.core.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${fasterxml.jackson.core.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${fasterxml.jackson.core.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-jsr310</artifactId>
				<version>${fasterxml.jackson.module.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.dataformat</groupId>
				<artifactId>jackson-dataformat-yaml</artifactId>
				<version>${fasterxml.jackson.module.version}</version>
			</dependency>

			<!-- postgresql - JDBC driver for postgresql database -->
			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>${jdbc.postgres.driver.version}</version>
				<scope>runtime</scope>
			</dependency>

			<!-- Spring MVC - REST based annotation framework -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webmvc</artifactId>
				<version>${spring.framework.version}</version>
			</dependency>

			<!-- H2 - memory database for testing -->
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<id>dai-open</id>
			<name>DAI Open</name>
			<url>http://repositories.dai-labor.de/extern/content/repositories/dai-open</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>Eclipse Paho Repo</id>
			<url>https://repo.eclipse.org/content/repositories/paho-releases/</url>
		</repository>
	</repositories>

	<modules>
		<module>database</module>
		<module>webapp</module>
		<!--
		<module>computation</module>
		<module>view</module>
		-->
	</modules>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>${maven.enforcer.plugin.version}</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>${required.maven.version}</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
				<configuration>
					<release>${maven.compiler.release.version}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.plugin.version}</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven.failsafe.plugin.version}</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
